--- a/postgres/macros.jinja
+++ b/postgres/macros.jinja
@@ -23,8 +23,7 @@
 {{ state }}-{{ name }}:
   {{ state }}.{{ ensure|default('present') }}:
     {{- format_kwargs(kwarg) }}
-    - onchanges:
-      - test: postgres-reload-modules
+    - reload_modules: True
 
 {%- endmacro %}
 
